@@ -7,6 +7,7 @@ uoamhub (0.9.1) unstable; urgency=low
   * enable SO_REUSEADDR to get rid of the "Address already in use" errors
   * enable SO_KEEPALIVE
   * ignore SIGPIPE and SIGALRM
+  * check password on every data packet
 
  --
 
